<resources>
    <string name="app_name">Your city is listening to</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account_information">Questa simpatica app ti permette di registrare audio ovunque tu sia.
        Gli audio verranno caricati sulla piattaforma che darà una serie di statistiche inerenti.
        Potrai inoltre visualizzare i dati delle tue registrazioni e delle registrazioni degli altri utenti.</string>
    <string name="info_audio">INFO AUDIO</string>
    <string name="i_tuoi_audio">I TUOI AUDIO</string>
    <string name="nascondi_audio">Nascondi</string>
    <string name="ottieni_localizzazione">Ottieni localizzazione</string>
    <string name="play">Play</string>
    <string name="cancella_audio">Cancella</string>
    <string name="avvia_registrazione">Avvia registrazione</string>
    <string name="interrompi_registrazione">Interrompi registrazione</string>
    <string name="cancella_registrazione">Cancella registrazione</string>
    <string name="conferma_registrazione">Conferma registrazione</string>
    <string name="stop">Stop</string>
    <string name="registra_nuovo_audio">REGISTRA AUDIO</string>
    <string name="offline_msg">Sei in modalità Offline.\nRiavvia l\'app una volta stabilita una connessione ad internet stabile!</string>
    <string name="audio_da_caricare">AUDIO DA CARICARE</string>
    <string name="tutti_gli_audio">TUTTI GLI AUDIO</string>
    <string name="importa_registrazione">Importa registrazione</string>
    <string name="se_non_sei_registrato_nclicca_qui">Se non sei registrato,\nclicca qui!</string>
</resources>