<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activities.RecordActivity">


    <Button
        android:id="@+id/btnLocal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@color/grey"
        android:backgroundTint="@color/grey"
        android:padding="10dp"
        android:text="@string/ottieni_localizzazione"
        android:textColor="@color/white"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/txtLocal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnStartRecording"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@color/grey"
        android:backgroundTint="@color/grey"
        android:padding="10dp"
        android:text="@string/avvia_registrazione"
        android:textColor="@color/white"
        android:textSize="13sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tvRecordingTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="00:00"
        android:textAlignment="center"
        android:visibility="invisible" />

    <Button
        android:id="@+id/btnStopRecording"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/interrompi_registrazione"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tvAudioLength"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="00:00"
        android:textAlignment="center"
        android:visibility="invisible" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tvCurrentPosition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="00:00"
        android:textAlignment="center"
        android:visibility="invisible" />

    <Button
        android:id="@+id/btnPlayPause"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Play"
        android:visibility="invisible" />

    <Button
        android:id="@+id/btnDeleteRecording"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancella_registrazione"
        android:visibility="invisible" />

    <Button
        android:id="@+id/btnConfirmRecording"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/conferma_registrazione"
        android:visibility="invisible" />

</LinearLayout>
