<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textIniziale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_audio"
            android:textAlignment="center"
            android:textSize="40sp"
            android:textStyle="bold"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/textCreatorUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textLuogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textLongitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textLatitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textBpm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textDanceability"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textLoudness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textTopMood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textTopGenre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textTopInstrument"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp">

            <Button
                android:id="@+id/btnPlay"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@color/green"
                android:drawableBottom="@drawable/play_w"
                android:gravity="center"
                android:padding="2dp"
                android:visibility="invisible" />

            <Button
                android:id="@+id/btnStop"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@color/grey"
                android:drawableTop="@drawable/stop_w"
                android:gravity="center"
                android:padding="5dp"
                android:visibility="invisible" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp">

            <Button
                android:id="@+id/btnHide"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@color/grey"
                android:padding="10dp"
                android:text="@string/nascondi_audio"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:visibility="invisible" />

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@color/red"
                android:padding="10dp"
                android:text="@string/cancella_audio"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:visibility="invisible" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
